# defensetech-roadmap

./: .gitignore  CERTIFICATION_CHECKLIST.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  STUDY_SCHEDULE.md  mkdocs.yml  requirements.txt
00-introduction/: README.md  cheat-sheet.md  checklist.md  detailed-guide.md  further-reading.md  homework.md  interview-questions.md  lab.md  mini-project.md  practice.md  project-ideas.md  real-world-scenario.md  resources.md  self-assessment.md  templates.md
01-defense-fundamentals/: README.md  cheat-sheet.md  checklist.md  detailed-guide.md  further-reading.md  homework.md  interview-questions.md  lab.md  mini-project.md  practice.md  project-ideas.md  real-world-scenario.md  resources.md  self-assessment.md  templates.md
02-linux-for-robotics/: README.md  cheat-sheet.md  checklist.md  detailed-guide.md  further-reading.md  homework.md  interview-questions.md  lab.md  mini-project.md  practice.md  project-ideas.md  real-world-scenario.md  resources.md  self-assessment.md  templates.md
03-networking/: README.md  cheat-sheet.md  checklist.md  detailed-guide.md  further-reading.md  homework.md  interview-questions.md  lab.md  mini-project.md  practice.md  project-ideas.md  real-world-scenario.md  resources.md  self-assessment.md  templates.md
04-python/: README.md  cheat-sheet.md  checklist.md  detailed-guide.md  (+11 more)
05-modern-cpp/examples/: CMakeLists.txt  CMakePresets.json  thread_pool.cpp
09-ros2/examples/: launch.py  package.xml  publisher.py  telemetry_publisher.py  telemetry_subscriber.py
(+283 files in other folders)
